@@ -178,7 +178,7 @@ assign: var '=' expr
 	    }
 	| /*empty*/
 expr:	CONST	{ $$ = $1; }
-	| CONST CONST
+	| expr CONST
 	    {
 		if($1->type() != Reg::String || $2->type() != Reg::String) throw TError(p_fnc->nodePath().c_str(),_("Error constant after constant"));
 		$1->val().s_el->append(*($2->val().s_el));
